<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MOST DEMO Echographist App</string>
    <string name="login_user">Username:</string>
    <string name="login_password">Password:</string>
    <string name="login_button">Login</string>

    <string name="lbl_ip_address">Ip Address</string>
    <string name="lbl_enter_passcode">Enter your passcode:</string>
    <string name="lbl_patients_title">Patient</string>
    <string name="lbl_teleconsultation_title">Teleconsultation</string>

    <string name="title_activity_waiting">WaitingActivity</string>
    <string name="action_call">Call</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_teleconsultation">TeleconsultationActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="close_session">Close session</string>

    <string name="call_hangup">Hangup</string>

    <string name="call_onHold">On Hold</string>
    <string name="call_onLine">On Line</string>
    <string name="cancel">Cancel</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="config_server_address">Config Server Address</string>
    <string name="remote_app">Remote Ecographist App</string>
    <string name="config_server_port">Config Server Port</string>
    <string name="save">Save</string>
    <string name="select_task_group_dialog">Select the taskgroup</string>
    <string name="start_emergency_call">START EMERGENCY CALL</string>
    <string name="task_group">Task Group</string>
    <string name="text_summary_patient_hint">Insert patient name</string>
    <string name="severity">SEVERITY:</string>
    <string name="room">ROOM:</string>
    <string name="start_emergency">START EMERGENCY</string>
    <string name="login_error">Login Error</string>
    <string name="login_error_details">Invalid Pin code. Please retry.</string>
    <string name="waiting_for_specialist">Waiting for specialist…</string>
    <string name="device_info">Device Info</string>
    <string name="device_id">Device ID</string>
    <string name="error">Error</string>
    <string name="device_not_registered">The device is not registered in the server. Contact the administator</string>
    <string name="generic_taskgroup_error">An error occurred retrieving the taskgroups</string>
    <string name="error_contacting_the_server">Error contacting the configuration server. Check the parameters</string>
    <string name="user_selection_title">User Selection</string>
    <string name="enter_pass_code_title">Pass Code</string>
    <string name="patient_selection_title">Select Patient</string>
    <string name="summary_title">Summary</string>
    <string name="teleconsultation_title">Teleconsultation Selection</string>
    <string name="hangup_call">Hangup</string>
    <string name="ptz">PTZ</string>
    <string name="role">Role</string>
    <string name="ecographist">Ecographist</string>
    <string name="specialist">Specialist</string>
    <string name="wait_for_specialist_message">A consultation request has been sent\\nWait for the specialist to respond</string>
    <string name="paused">PAUSED</string>

    <string-array name="roles_entries">
        <item>@string/ecographist</item>
        <item>@string/specialist</item>
    </string-array>
    <string-array name="roles_entries_values">
        <item>eco_role</item>
        <item>spec_role</item>
    </string-array>
</resources>
