<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/summary_title"
        android:textAllCaps="true"
        android:textSize="20sp"/>

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/lbl_patients_title"/>

    <TextView
        android:id="@+id/text_summary_patient_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/text_summary_patient_hint"/>

    <TextView
        android:id="@+id/text_summary_patient_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:id="@+id/button_summary_start_emergency"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle_button"
        android:text="@string/start_emergency"
        android:textColor="#FFFFFF"/>

</LinearLayout>
